Track styles to prevent viewport from jumping

--- a/public/index.css
+++ b/public/index.css
@@ -119,9 +119,9 @@ body[data-playlist-mode="true"] #mode-button-playlist {
 
 .track {
 	columns: 2;
-  height: 4rem;
   display: grid;
   grid-template-columns: 50% 50%;
+	overflow: hidden;
 }
 
 .track:nth-child(even) {
@@ -139,6 +139,9 @@ body[data-playlist-mode="true"] #mode-button-playlist {
 
 .add-to-playlist {
   margin: -0.5rem 0rem -0.5rem -1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 body[data-playlist-mode="false"] .add-to-playlist {
@@ -146,10 +149,15 @@ body[data-playlist-mode="false"] .add-to-playlist {
 }
 
 .track-name {
-	overflow: hidden;
 	word-wrap: break-word;
   font-size: 0.9rem;
   display: grid;
+  padding: 1.5rem 0rem 1.5rem 1rem;
+  height: 4rem;
+}
+
+.track-name .name {
+	overflow: hidden;
 }
 
 body[data-playlist-mode="true"] .track-name {
@@ -157,14 +165,15 @@ body[data-playlist-mode="true"] .track-name {
 }
 
 .track-album {
-	text-align: end;
-	overflow: auto;
-	word-wrap: break-word;
+  text-align: end;
+  word-wrap: break-word;
   font-size: 0.9rem;
+  padding: 1.5rem 1rem 1.5rem 0rem;
+  overflow: hidden;
+  height: 3.5rem;
 }
 
 div[role="link"] {
-  padding: 1.5rem 1rem;
 	cursor: pointer;
 }
 
@@ -255,15 +264,21 @@ div#current-playing-text {
     height: 40px;
   }
 
-	div[role="link"] {
-		padding-left: 1rem;
-		padding-top: .5rem;
-		padding-bottom: .5rem;
-	}
+
+  .track-name {
+    font-size: 1rem;
+    padding: 0.5rem 0rem 0.5rem 1rem;
+    height: 3rem;
+    align-content: center;
+  }
 
 	.track-album {
 		text-align: start;
     font-size: 1rem;
+    padding: 0.5rem 1rem 0.5rem 0rem;
+    height: 3rem;
+    display: grid;
+    align-content: center;
 	}
 
   body[data-playlist-mode="false"] #playlist,
@@ -284,21 +299,16 @@ div#current-playing-text {
     flex-direction: column-reverse;
   }
 
-  #playlist .track-album {
-    text-align: right;
-    font-size: 0.7rem;
-  }
-
-  .track {
-    height: 3rem;
-  }
-
-  .track-name {
-    font-size: 1rem;
-  }
-
   #playlist .track-name {
     font-size: 0.8rem;
+    grid-column: 1 / 3;
+    height: 2.5rem;
+  }
+
+  #playlist .track-album {
+    display: none;
+/*     text-align: right; */
+    /* font-size: 0.7rem; */
   }
 
 	footer {
